         xdisplay.c}},unittests,unittests/Makefile.am,z80,
         z80/{Makefile.am,tests,tests/Makefile.am,z80_ops.c}: switch to using
         non-recursive makefile (patch #321) (thanks, Stuart) (Sergio).
20150617 Makefile.am,data/Makefile.am,ui/{fb,gtk,sdl,svga,widget,wii,win32,
         xlib}/Makefile.am,z80/Makefile.am: enable silent rules for perl and 
         windres commands (Sergio).
20150618 ui/{svga/svgajoystick.c,uijoystick.h,widget/menu.c}: define
         NUM_JOY_BUTTONS for SVGAlib UI and avoid generation of unused functions
         (Sergio).
20150621 Makefile.am,compat/Makefile.am,configure.ac,data/Makefile.am,
         data/win32,data/win32/{distribution.mk,fuse.manifest.in,
         installer.nsi.in,winfuse.ico},windres.rc: move Windows resources that
         are UI-independent to data/win32 (Sergio).
20150622 ui/widget/filesel.c: add missing const qualifiers (Sergio).
20150623 peripherals/{nic/{enc28j60.c,w5100.c,w5100_socket.c},speccyboot.c,
         spectranet.c},sound/blipbuffer.h: use '#include <config.h>' instead of
         '#include "config.h"' (thanks, Stuart) (Sergio).
20150704 tape.c: skip tape traps if VERIFY is requested (patch #337) (UB880D).
20150726 machines/{spec_se.c,tc2048.c,tc2068.[ch],ts2068.c},
         peripherals/{dck.c,scld.[ch]}: The Timex SCLD (on daughterboard in
         the TS2068) is contended in all of the home, Dock and Exrom banks in
         the 0x4000 - 0x7FFF range (thanks, rga24 from WoS) (Fred).
20150803 peripherals/printer.c: make the partial decode ZX Printer not require a
         hard reset to enable (thanks, RMartins) (Fred).
20150824 Makefile.am,fuse.c,man/fuse.1,memory.[c|h],menu.[c|h],menu_data.dat,
         svg.[c|h],tape.c,ui.c,ui/{gtk/gtkui.c,ui.h,widget/widget.c,
         win32/win32ui.c},z80/{coretest.c,z80_checks.h,z80_ops.c}: capture BASIC
         video functions to SVG file (patch #322) (Stefano Bodrato).
20150824 ui/widget/widget.c: remove unused function (Sergio).